loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: not found: value n
for (compteur <-0 to n) {
                     ^