loopfor.LoopFor.scala.code
for (compteur <-0 to n) {
  forward();
}
prendBiscuit();
